@@ -97,11 +97,8 @@ CXX = g++
 # C Compiler command
 CC = gcc
 
-# Flags for which FMU type, me, cs or me+cs.
-FMU_TYPES =
-
 # C Compiler options
-CFLAGS = -g -std=c89 -pedantic ${FMU_TYPES} -fPIC -msse2 -mfpmath=sse
+CFLAGS = -g -std=c89 -pedantic -fPIC -msse2 -mfpmath=sse
 
 SHARED_LDFLAGS = -dynamiclib -Wl,-rpath,@loader_path/ -pthread
 
@@ -160,7 +157,7 @@ fmucs10_: $(OBJS)
 	$(RM) $(OBJS)
 
 fmume20:
-	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUME20 fmume20_
+	$(MAKE) -f $(MAKEFILE) fmume20_
 
 fmume20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -168,7 +165,7 @@ fmume20_: $(OBJS)
 	$(RM) $(OBJS)
 	
 fmucs20:
-	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUCS20 fmucs20_
+	$(MAKE) -f $(MAKEFILE) fmucs20_
 	
 fmucs20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -176,7 +173,7 @@ fmucs20_: $(OBJS)
 	$(RM) $(OBJS)
 	
 fmumecs20:
-	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUME20 FMU_TYPES+=-DFMUCS20 fmucs20_
+	$(MAKE) -f $(MAKEFILE) fmucs20_
 	
 fmumecs20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
